[package]
name = "in_memory_broker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Зависимости для проекта
[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-stream = "0.3"
bytes = "1.4" # Для работы с байтовыми массивами в теле запроса

